# hnx

./: .gitignore  AGENTS.md  ARCHITECTURE_REFACTORING.md  BOOT_SYSTEM.md  Cargo.toml  Makefile  QWEN.md  README.MD  TASK.md  VERSION  demo.sh  meson.build  meson_options.txt  pyproject.toml  rust-toolchain.toml  test_eret.S
kernel/: Cargo.toml  build.rs  readme.md
kernel/src/: debug.rs  kernel.rs  main.rs  syscall.rs  version.rs
kernel/src/abi/: constants.rs
kernel/src/arch/: mod.rs
kernel/src/arch/aarch64/: boot.S  context.rs  cpu.rs  mod.rs
kernel/src/arch/aarch64/boot/: mod.rs
kernel/src/arch/aarch64/interrupt/: mod.rs
kernel/src/arch/aarch64/mmu/: mmu_boot.rs
kernel/src/arch/common/: mod.rs  registers.rs  traits.rs
kernel/src/arch/common/mmu/: mod.rs
kernel/src/arch/common/timer/: mod.rs
kernel/src/arch/implementations/: mod.rs
kernel/src/arch/implementations/aarch64/: mod.rs
kernel/src/arch/traits/: boot.rs  cpu.rs  exception.rs  interrupt.rs  mmu.rs  mod.rs  timer.rs
kernel/src/console/: mod.rs
kernel/src/core/ipc/: mod.rs
kernel/src/core/scheduler/: mod.rs
kernel/src/drivers/: mod.rs
kernel/src/drivers/block/: mod.rs  tests.rs
kernel/src/drivers/device_manager/: mod.rs
kernel/src/drivers/gic/: debug.rs  mod.rs  stats.rs
kernel/src/drivers/net/: mod.rs
kernel/src/error/: mod.rs
kernel/src/ipc_services/: IPC_DELEGATION_FRAMEWORK.md  endpoints.rs
kernel/src/loader/: bootstrap_elf.rs  initrd.rs  mod.rs
kernel/src/memory/: dma.rs  manager.rs  mmap_manager.rs  mod.rs  slab_allocator.rs
kernel/src/memory/allocator/: buddy.rs  dma.rs  mod.rs  slab.rs
kernel/src/memory/physical/: mod.rs
kernel/src/memory/protection/: mod.rs
kernel/src/memory/virt/: mod.rs
kernel/src/memory/virtual_/: mod.rs
kernel/src/object/: handle.rs  mod.rs  table.rs  traits.rs
kernel/src/object/types/: channel.rs  event.rs  mod.rs  process.rs  thread.rs  vmo.rs
kernel/src/process/: mod.rs  spawn.rs
kernel/src/process/syscall/: driver.rs  exec.rs  fs_stubs.rs  loader.rs  mod.rs  network.rs  process.rs  signal.rs
kernel/src/process/task/: mod.rs
kernel/src/security/: capability.rs  mod.rs  test.rs
kernel/src/sync/: barrier.rs
kernel/src/user/: loader.rs
src/kernel/: Cargo.toml  MIGRATION_STATUS.md  Makefile  SYSCALL_ANALYSIS.md  USER_PROCESS_IMPLEMENTATION.md  build.rs
src/kernel/src/: lib.rs  main.rs  version.rs
src/kernel/src/abi/: constants.rs  mod.rs
src/kernel/src/arch/: mod.rs
src/kernel/src/arch/aarch64/: boot.S  context.rs  cpu.rs  memory.rs  mod.rs  selftest.S
src/kernel/src/arch/common/: traits.rs
src/kernel/src/configs/: aarch64.toml
src/kernel/src/console/: mod.rs
src/kernel/src/console.backup/: mod.rs
src/kernel/src/core/: mod.rs
src/kernel/src/core/ipc/: example.rs  mod.rs  test.rs
src/kernel/src/core/scheduler/: mod.rs
src/kernel/src/debug/: command_parser.rs  debugger.rs  memory_monitor.rs  mod.rs  process_monitor.rs  test.rs
src/kernel/src/drivers/: device_manager.rs  dtb.rs  dtb_parser.rs  ipc_protocol.rs  mod.rs
src/kernel/src/drivers/bus/: mod.rs
src/kernel/src/drivers/device_manager/: mod.rs
src/kernel/src/drivers/gic/: stats.rs  test.rs  v2.rs  v2.rs.backup
src/kernel/src/drivers/uart/: mod.rs  pl011.rs  pl011.rs.backup  trait.rs
src/kernel/src/error/: mod.rs
src/kernel/src/fs/: acl.rs  design.rs  dirent.rs  mod.rs  path.rs  snapshot.rs  symlink.rs  xattr.rs
src/kernel/src/fs/cpio/: mod.rs
src/kernel/src/fs/elf/: dynamic_linker.rs  mod.rs  pltgot.rs  shared_library.rs
src/kernel/src/fs/ohlink/: mod.rs
src/kernel/src/fs/ramfs/: mod.rs
src/kernel/src/fs/vfs/: mod.rs
src/kernel/src/ipc_services/: IPC_DELEGATION_FRAMEWORK.md  delegate.rs  mod.rs  protocol.rs
src/kernel/src/lib/: mod.rs
src/kernel/src/loader/: bootstrap_elf.rs  initrd.rs  mod.rs
src/kernel/src/memory/: buddy_allocator.rs  buddy_allocator_test.rs  dma.rs  mmap_manager.rs  mmap_manager_test.rs  mod.rs  slab_allocator_enhanced_test.rs  slab_allocator_test.rs
src/kernel/src/memory/physical/: mod.rs
src/kernel/src/memory/protection/: mod.rs
src/kernel/src/memory/virtual_/: mod.rs
src/kernel/src/network/: arp.rs  dhcp.rs  dns.rs  ethernet.rs  firewall.rs  firewall_enhanced.rs  firewall_example.rs  icmp.rs  interface.rs  ipc_protocol.rs  ipv4.rs  ipv6.rs  manager.rs  mod.rs  monitoring.rs  qos.rs  qos_enhanced.rs  qos_example.rs  socket.rs  tcp.rs  tcp_congestion.rs  tcp_test.rs  udp.rs  zerocopy.rs
src/kernel/src/network/test/: enhanced_tests.rs  integration_test.rs  integration_test_accept.rs  integration_test_qos.rs  integration_test_send_recv.rs  mod.rs  run_tests.rs  test_firewall.rs  test_network_monitoring.rs  test_qos.rs  test_qos_simple.rs  test_socket_nonblocking.rs  test_tcp_accept.rs  test_tcp_send_recv.rs
src/kernel/src/panic/: mod.rs
src/kernel/src/process/: advanced.rs  mod.rs  spawn.rs
src/kernel/src/process/syscall/: channel.rs  driver.rs  exec.rs  fs_stubs.rs  mod.rs  network.rs  process.rs  process_create.rs  signal.rs  vmo.rs
src/kernel/src/process/task/: mod.rs
src/kernel/src/scripts/: link.ld.S
src/kernel/src/security/: capability.rs  mod.rs  test.rs
src/kernel/src/sync/: mod.rs  mutex.rs
src/kernel/src/syscall/: mod.rs
src/kernel/src/testing/: mod.rs  tests.rs
src/kernel/src/user/: mod.rs  spawn.rs
src/space/: Cargo.toml
src/space/abi/: Cargo.toml
src/space/abi/src/: lib.rs
src/space/apps/shell/: Cargo.toml
src/space/apps/shell/src/: main.rs
src/space/hnxlib/: Cargo.toml
src/space/hnxlib/src/: barrier.rs  ipc.rs  lib.rs  safe_syscall.rs
src/space/libc/: Cargo.toml
src/space/libc/src/: lib.rs  print.rs
src/space/services/: SERVICE_DEVELOPMENT.md
src/space/services/device-driver-server/: Cargo.toml
src/space/services/filesystem-server/: Cargo.toml
src/space/services/init/: Cargo.toml
src/space/services/init/src/: main.rs
src/space/services/ipcrouter-service/: Cargo.toml
src/space/services/loader-service/: Cargo.toml
src/space/services/network-server/: Cargo.toml
src/space/services/vfs-service/: VFS_SERVICE_IMPLEMENTATION.md
(+154 files in other folders)
