# hnx/Cargo.toml
[workspace]
members = [
    "kernel",
]

resolver = "2"

[workspace.dependencies]
log = "0.4"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
panic = "abort"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[profile.kernel]
inherits = "release"
opt-level = "z"
panic = "abort"