[package]
name = "hnx-kernel"
version = "0.0.1"
edition = "2021"
authors = ["HNX Developer"]

[dependencies]
log = { version = "0.4", default-features = false }
bitflags = { version = "2.0", default-features = false }
spin = "0.9.8"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
heapless = "0.8"
hnx-abi = { path = "../abi-bindings" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = { version = "8.0.0", default-features = false }

[dev-dependencies]

[build-dependencies]
quote = "1.0"
proc-macro2 = "1.0"
toml = "0.8"

# Link with libc
[package.metadata.link]
links = ["../../space/libc/libhnxc.a"]