[package]
name = "hnx-kernel"
version = "0.0.1"
edition = "2021"
authors = ["HNX Developer"]

[dependencies]
hnx-abi = { path = "../abi-bindings" }
log = "0.4"
spin = "0.9"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }

[features]
default = []
qemu_test = []

[build-dependencies]
quote = "1.0"
proc-macro2 = "1.0"
toml = "0.8"