# src/space/Cargo.toml
[workspace]
members = [
    "abi",
    "libc",
    "hnxlib",
    #"services/init",
    #"services/device-manager",
    #"services/display-server",
    #"drivers/uart-driver",
    #"apps/shell",
    #"apps/terminal",
    #"apps/hello-world",
    #"boot/userboot",
]

resolver = "2"

[workspace.dependencies]
# 共享依赖
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"

# 内部 crate
hnx-abi = { path = "abi" }
hnx-libc = { path = "libc" }
hnx-lib = { path = "hnxlib" }

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["HNX Developers"]
license = "MIT"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1